--- a/service-yakkyoku.html
+++ b/service-yakkyoku.html
@@ -96,7 +96,7 @@
         .header { position: fixed; top: 0; left: 0; right: 0; background: rgba(27,46,92,0.97); backdrop-filter: blur(12px); -webkit-backdrop-filter: blur(12px); border-bottom: none; z-index: 1000; transition: box-shadow 0.3s; }
         .header.scrolled { box-shadow: 0 4px 12px rgba(0,0,0,0.15); }
         .nav { max-width: 1100px; margin: 0 auto; padding: 0 24px; display: flex; justify-content: space-between; align-items: center; height: 72px; }
-        .logo { display: flex; align-items: center; gap: 10px; font-weight: 700; font-size: 1.25rem; color: var(--primary); }
+        .logo { display: flex; align-items: center; gap: 10px; font-weight: 700; font-size: 1.25rem; color: var(--white); }
         .logo img { flex-shrink: 0; }
         .nav-links { display: flex; list-style: none; gap: 8px; }
         .nav-links a { display: block; padding: 8px 16px; font-size: 0.9rem; font-weight: 500; color: rgba(255,255,255,0.85); border-radius: 8px; transition: color 0.2s, background 0.2s; }
@@ -238,7 +238,7 @@
     </section>
 
     <!-- Wave divider -->
-    <div style="margin-top:-1px;line-height:0;overflow:hidden;"><svg viewBox="0 0 1440 80" fill="none" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" style="width:100%;height:60px;display:block;"><path d="M0,40 C360,80 720,0 1080,40 C1260,60 1380,50 1440,40 L1440,0 L0,0 Z" fill="#FFF8F0" opacity="0.5"/><path d="M0,30 C240,70 480,10 720,40 C960,70 1200,10 1440,30 L1440,0 L0,0 Z" fill="#FFF8F0"/></svg></div>
+    <div style="margin-top:-1px;line-height:0;overflow:hidden;background:var(--white);"><svg viewBox="0 0 1440 80" fill="none" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" style="width:100%;height:60px;display:block;"><path d="M0,40 C360,80 720,0 1080,40 C1260,60 1380,50 1440,40 L1440,0 L0,0 Z" fill="var(--primary-light)" opacity="0.5"/><path d="M0,30 C240,70 480,10 720,40 C960,70 1200,10 1440,30 L1440,0 L0,0 Z" fill="var(--accent-light)"/></svg></div>
 
     <section class="section">
         <div class="container">
